# study-AI

./: .gitignore  README.md
dify/telegraph/: README.md  manifest.yaml
dify/telegraph/provider/: telegraph.py  telegraph.yaml
dify/telegraph/tools/: telegraph.py  telegraph.yaml
figma/: rokid-tutorial-1.json
mcp-demo-py/: README.md  main.py  pyproject.toml
mcp-demo-py/simples/: basic_tools.py
token-calculator/: Development.md  environment.yml  main.py  requirements.txt
token-calculator/config/: openai.json  reinit.py
